--- a/style/style.css
+++ b/style/style.css
@@ -95,6 +95,21 @@
   border: 2px solid #1E90FF;
 }
 
+.notificationTitle{
+  background-color: #ffffff;
+  color: #000000;
+  margin: 5px 35px 0px 20px;
+  padding: 0px 10px 0px 15px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.notification{
+  margin: 0px 35px 5px 20px;
+  padding: 0px 10px 0px 10px;
+  border: 2px solid #ffffff;
+}
+
 .backButton{
   font-size: 16px;
   font-weight: normal;
