--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,11 @@
 :root {
-  --webColor: #1580FF;
+  --webColor: orange;
+  --webTextColor: #000000;
+}
+
+@font-face {
+  font-family: "code";
+  src: url("../fonts/DroidSansMono-1.ttf") format("truetype");
 }
 
 .webIndex {
@@ -13,22 +19,28 @@
 
 .webTitle {
   background-color: var(--webColor);
-  color: #ffffff;
+  color: var(--webTextColor);
   position: sticky;
   top: 0;
   margin: 0px;
-  padding: 3px 6px 3px 6px;
+  padding: 3px 6px 0px 6px;
   font-size: 26px;
 }
 
 .pageNow {
   background-color: var(--webColor);
-  color: #ffffff;
+  color: var(--webTextColor);
   position: sticky;
   top: 35px;
   margin-top: 0px;
   margin-bottom: 5px;
   padding: 0px 0px 0px 10px;
+}
+
+.backButton{
+  font-size: 16px;
+  font-weight: normal;
+  color: var(--webTextColor);
 }
 
 .pageTitle {
@@ -54,7 +66,7 @@
 }
 
 .attentionTitle{
-  background-color: yellow;
+  background-color: orange;
   color: #000000;
   margin: 5px 35px 0px 20px;
   padding: 0px 10px 0px 15px;
@@ -64,11 +76,11 @@
 .attention{
   margin: 0px 35px 5px 20px;
   padding: 0px 10px 0px 10px;
-  border: 2px solid yellow;
+  border: 2px solid orange;
 }
 
 .warningTitle{
-  background-color: red;
+  background-color: #d80000;
   color: #ffffff;
   margin: 5px 35px 0px 20px;
   padding: 0px 10px 0px 15px;
@@ -78,7 +90,7 @@
 .warning{
   margin: 0px 35px 5px 20px;
   padding: 0px 10px 0px 10px;
-  border: 2px solid red;
+  border: 2px solid #d80000;
 }
 
 .noteTitle{
@@ -96,7 +108,7 @@
 }
 
 .notificationTitle{
-  background-color: #ffffff;
+  background-color: #e9e9e9;
   color: #000000;
   margin: 5px 35px 0px 20px;
   padding: 0px 10px 0px 15px;
@@ -107,12 +119,27 @@
 .notification{
   margin: 0px 35px 5px 20px;
   padding: 0px 10px 0px 10px;
-  border: 2px solid #ffffff;
+  border: 2px solid #e9e9e9;
 }
 
-.backButton{
-  font-size: 16px;
-  font-weight: normal;
+.codeTitle{
+  background-color: #505050;
+  color: #d7d7d7;
+  margin: 5px 35px 0px 20px;
+  padding: 0px 10px 0px 15px;
+  font-weight: bold;
+}
+
+.code{
+  margin: 0px 35px 5px 20px;
+  padding: 2px 10px 2px 10px;
+  border: 2px solid #505050;
+  font-family: "code", sans-serif;
+}
+
+.mono{
+  font-family: "code", sans-serif;
+  background-color: #505050;
 }
 
 .link{
