--- a/style/style.css
+++ b/style/style.css
@@ -65,6 +65,14 @@
   font-weight: normal;
 }
 
+.pageTitle3{
+  margin: 5px 10px 5px 10px;
+  padding: 0px 35px 0px 20px;
+  color: #d7d7d7;
+  font-weight: bold;
+  font-size: 18;
+}
+
 .attentionTitle{
   background-color: orange;
   color: #000000;
