--- a/style/style.css
+++ b/style/style.css
@@ -68,9 +68,9 @@
 .pageTitle3{
   margin: 5px 10px 5px 10px;
   padding: 0px 35px 0px 20px;
-  color: #d7d7d7;
+  color: #b6b6b6;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 22px;
 }
 
 .attentionTitle{
