--- a/style/style.css
+++ b/style/style.css
@@ -68,7 +68,7 @@
 .pageTitle3{
   margin: 5px 10px 5px 10px;
   padding: 0px 35px 0px 20px;
-  color: #b6b6b6;
+  color: #d7d7d7;
   font-weight: bold;
   font-size: 22px;
 }
