--- a/style/style.css
+++ b/style/style.css
@@ -152,7 +152,7 @@
 }
 
 .link{
-  color: #00ff00
+  color: #00ff00;
 }
 
 .pageIndexLink{
@@ -176,7 +176,7 @@ a {
 }
 
 hr {
-  width: 97%
+  width: 97%;
   color: #a9a9a9;
 }
 
